# jira-issue-commit-hook

./: .pre-commit-hooks.yaml  README.md  jira_issue_commit_hook.py  pyproject.toml
